fixed layout in shop page, fixed spacing in nav, added my posts page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -20,9 +20,10 @@
   white-space: break-space;
 }
 
-.username{
-  margin-right: 20PX;
+.margin-right{
+  margin-right: 20px;
 }
+
 /* -----------------------------------------------------------------------------
 
 Table Of Contents
@@ -496,7 +497,7 @@ p:last-child {
 # Base - Grid
 
 ----------------------------------------------------------------------------- */
-.row {
+/* .row {
   display: table;
   display: -webkit-flex;
   display: -moz-flex;
@@ -595,10 +596,10 @@ p:last-child {
   .row [class^="col-"]:nth-child(2) {
     margin-top: 3rem;
   }
-}
+} */
 
 /* Reduce spacing between rows */
-@media only screen and (max-width: 1023px) {
+/* @media only screen and (max-width: 1023px) {
   .row.reduce-spacing [class^="col-"] {
     margin: 1rem 2% 0 2%;
   }
@@ -629,10 +630,10 @@ p:last-child {
   .row.reduce-spacing [class^="col-"]:nth-child(2) {
     margin-top: 1rem;
   }
-}
+} */
 
 /* Reverse the order of columns when going full-width */
-@media only screen and (max-width: 767px) {
+/* @media only screen and (max-width: 767px) {
   .row.reverse-order [class^="col-"] {
     margin: 3rem 0 0 0;
   }
@@ -670,10 +671,10 @@ p:last-child {
   .row.reverse-order.reduce-spacing [class^="col-"]:last-child {
     margin-top: 0;
   }
-}
+} */
 
 /* Force a minimum of two columns */
-@media only screen and (max-width: 1023px) {
+/* @media only screen and (max-width: 1023px) {
   .row.min-two-columns:not(.reverse-order) [class^="col-"] {
     margin: 3rem 2% 0 2%;
     width: 48%;
@@ -708,10 +709,10 @@ p:last-child {
   .row.min-two-columns:not(.reverse-order).reduce-spacing [class^="col-"]:nth-child(even) {
     margin-right: 0;
   }
-}
+} */
 
 /* Remove gutter between columns */
-.row.no-gutter .col-one-half {
+/* .row.no-gutter .col-one-half {
   width: 50%;
 }
 
@@ -768,14 +769,14 @@ p:last-child {
   .row.no-gutter [class^="col-"] {
     width: 100%;
   }
-}
+} */
 
 /* -----------------------------------------------------------------------------
 
 # Tools - Align
 
 ----------------------------------------------------------------------------- */
-.center {
+/* .center {
   text-align: center;
 }
 
@@ -822,14 +823,14 @@ p:last-child {
   .center-mobile {
     text-align: center;
   }
-}
+} */
 
 /* -----------------------------------------------------------------------------
 
 # Tools - Background
 
 ----------------------------------------------------------------------------- */
-.bg-dark {
+/* .bg-dark {
   background: #110f24;
 }
 
@@ -843,10 +844,10 @@ p:last-child {
 
 .bg-white {
   background: #fff;
-}
+} */
 
 /* Gradients */
-.bg-gradient-dark {
+/* .bg-gradient-dark {
   background: #05050b;
   background: -webkit-linear-gradient(#110f24 0%, #05050b 100%);
   background: -moz-linear-gradient(#110f24 0%, #05050b 100%);
@@ -943,10 +944,10 @@ p:last-child {
   background: -ms-linear-gradient(#9e3ee2 0%, #7421db 100%);
   background: -o-linear-gradient(#9e3ee2 0%, #7421db 100%);
   background: linear-gradient(#9e3ee2 0%, #7421db 100%);
-}
+} */
 
 /* Advanced backgrounds */
-[class*="bg-image-"],
+/* [class*="bg-image-"],
 [class*="overlay-"] {
   overflow: hidden;
   position: relative;
@@ -976,10 +977,10 @@ p:last-child {
 [class*="bg-image-"]:after,
 [class*="overlay-"]:after {
   z-index: -2;
-}
+} */
 
 /* Overlays */
-.overlay:before {
+/* .overlay:before {
   background: rgba(255, 255, 255, 0.7);
 }
 
@@ -1033,10 +1034,10 @@ p:last-child {
 
 .dark.overlay-shape-06:before {
   background: url(../media/bg/shape-dark-06.svg);
-}
+} */
 
 /* Images */
-.bg-image-01:after {
+/* .bg-image-01:after {
   background: url(../media/bg/image-01@2x.jpg);
 }
 
@@ -1123,11 +1124,11 @@ p:last-child {
   background: -ms-linear-gradient(#110f24 0%, #05050b 100%);
   background: -o-linear-gradient(#110f24 0%, #05050b 100%);
   background: linear-gradient(#110f24 0%, #05050b 100%);
-}
+} */
 
-.overlay-hero:before {
+/* .overlay-hero:before {
   background: url(../media/bg/shape-hero.svg);
-}
+} */
 
 /* -----------------------------------------------------------------------------
 
